--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -78,27 +78,27 @@
                 <div class="fiveday">
                     <div class="forecast">
                         <span class="weekday" id="day1"></span>
-                        <img src="" alt="" id="icon1">
+                        <img src="#" alt="" id="icon1">
                         <span class="weather-data" id="temp1"></span>
                     </div>
                     <div class="forecast">
                         <span class="weekday" id="day2"></span>
-                        <img src="" alt="" id="icon2">
+                        <img src="#" alt="" id="icon2">
                         <span class="weather-data" id="temp2"></span>
                     </div>
                     <div class="forecast">
                         <span class="weekday" id="day3"></span>
-                        <img src="" alt="" id="icon3">
+                        <img src="#" alt="" id="icon3">
                         <span class="weather-data" id="temp3"></span>
                     </div>
                     <div class="forecast">
                         <span class="weekday" id="day4"></span>
-                        <img src="" alt="" id="icon4">
+                        <img src="#" alt="" id="icon4">
                         <span class="weather-data" id="temp4"></span>
                     </div>
                     <div class="forecast">
                         <span class="weekday" id="day5"></span>
-                        <img src="" alt="" id="icon5">
+                        <img src="#" alt="" id="icon5">
                         <span class="weather-data" id="temp5"></span>
                     </div>
                 </div>
@@ -110,15 +110,18 @@
                     <h3>Be prepared to stay safe and healthy in winter</h3>
                     <h5><i>Written by CDC :Centers for Disease Control and Prevention</i></h5>
                     <p>Winter storms and cold temperatures can be dangerous. Stay safe and healthly by planning ahead. Prepare your home and cars. Prepare for power outages and outdoor activies. </p>
-                    <p>Take These Steps for Your Home: </p>
-                    <p><ol>
-                        <li>Winterize your home</li>
+                    <p><strong>Take These Steps for Your Home:</strong> </p>
+                    <p>Many people prefer to remain indoors during winter, but staying inside is no guarantee of safety. Take these steps to keep your home safe and warm during the winter months.</p>
+
+                    <ul>
+                        <li>Winterize your home.
                         <ul>
                             <li>Install weather stripping, insulation, and storm windows.</li>
                             <li>Insulate water lines that run along exterior walls.</li>
                             <li>Clean out gutters and repair roof leaks.</li>
                         </ul>
-                        <li>Check your heating systems.</li>
+                        </li>
+                        <li>Check your heating systems.
                         <ul>
                             <li>Have your heating system serviced professionally to make sure that it is clean, working properly, and ventilated to the outside.</li>
                             <li>Inspect and clean fireplaces and chimneys.</li>
@@ -126,7 +129,8 @@
                             <li>Have a safe alternate heating source and alternate fuels available.</li>
                             <li>Prevent carbon monoxide (CO) emergencies.</li><span><a class="readFullArticle" href="https://www.cdc.gov/features/winterweather/index.html" target="_blank"> continue to read full article...</a></span>
                         </ul>
-                    </ol></p>
+                        </li>
+                    </ol>
                 </div>
             </div>
             <!---contact information goes here-->
