--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -127,10 +127,11 @@
                             <li>Inspect and clean fireplaces and chimneys.</li>
                             <li>Install a smoke detector. Test batteries monthly and replace them twice a year.</li>
                             <li>Have a safe alternate heating source and alternate fuels available.</li>
-                            <li>Prevent carbon monoxide (CO) emergencies.</li><span><a class="readFullArticle" href="https://www.cdc.gov/features/winterweather/index.html" target="_blank"> continue to read full article...</a></span>
+                            <li>Prevent carbon monoxide (CO) emergencies.</li>
                         </ul>
                         </li>
-                    </ol>
+                    </ul>
+                    <span><a class="readFullArticle" href="https://www.cdc.gov/features/winterweather/index.html" target="_blank"> continue to read full article...</a></span>
                 </div>
             </div>
             <!---contact information goes here-->
