--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -107,7 +107,7 @@
             <div class="article-area"><!--article area-->
                 <img class="articleimg" src="images/zion-park-139012_640.jpg" alt="Winter Season" >
                 <div class="article-holder">
-                    <h3>Be prepared to stay safe and healthy in winter</h3>
+                    <h3>10 Things to do in Soda Springs this winter</h3>
                     <h5><i>Written by CDC :Centers for Disease Control and Prevention</i></h5>
                     <p>Winter storms and cold temperatures can be dangerous. Stay safe and healthly by planning ahead. Prepare your home and cars. Prepare for power outages and outdoor activies. </p>
                     <p><strong>Take These Steps for Your Home:</strong> </p>
@@ -139,7 +139,7 @@
                         <img class="presmap" src="images/sodaMap.png" alt="Soda Springs Map">
                 <div class="contact-info">
                     <h3>Contact Details</h3>
-                    <p class="details">&#128204;30N 20E</p>
+                    <p class="details">&#128204;-111N 42E</p>
                     <P class="details">&#128234;Soda Springs, ID 83276</P>
                     <P class="details">&#128222;+999-999-9999</P>
                     <P class="details">&#128140; info@weatherguru.com</P>
