--- a/lesson11/gallery-7.html
+++ b/lesson11/gallery-7.html
@@ -31,8 +31,8 @@
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                     <li><a href ="home.html">Home</a></li>
                     <li><a href ="preston-10.html" >Preston</a></li>
-                    <li><a href="#">Soda Springs</a></li>
-                    <li><a href="#">Fish Haven</a></li>
+                    <li><a href="sodaSprings.html">Soda Springs</a></li>
+                    <li><a href="fishHaven.html">Fish Haven</a></li>
                     <li><a href="stormcenter.html">Storm Center</a></li>
                     <li><a href="gallery-7.html" class="active">Gallery</a></li>
                 </ul>
