--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -32,7 +32,7 @@
                 <li><a href ="home.html">Home</a></li>
                 <li><a href ="preston-10.html" >Preston</a></li>
                 <li><a href="sodaSprings.html" class="active"> Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
                 <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
