--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -31,8 +31,8 @@
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                 <li><a href ="home.html">Home</a></li>
                 <li><a href ="preston-10.html" >Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSprings.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="stormcenter.html" class="active" >Storm Center</a></li>
                 <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
