--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <li>Lesson 08:<a href="lesson8/tablebuild.html">Table Build</a>|<a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09:<a href="/lesson9/prophets.html">Prophets</a>| <a href="/lesson9/home.html">Home Page</a></li>
                 <li>Lesson 10:<a href="/lesson10/api-test.html">API Test</a> | <a href="/lesson10/preston-10.html">Preston Weather API </a> </li>
+                <li>Lesson 11:<a href="/lesson11/sodaSprings.html">Soda Springs</a></li>
+                
 
             </ul>
 
