--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -44,7 +44,7 @@
                     <source srcset="images/sodasprings_small.jpg" media = "(max-width:500px)">
                     <source srcset="images/sodasprings_medium.jpg" media = "(min-width:520px) and (max-width:959px)" >
                     <source srcset="images/sodasprings_large.jpg" media = "(min-width:960px)">
-                    <img class="heroImg" src="images/sodasprings.jpg" alt="Soda Springs">
+                    <img class="heroImg" src="images/soda_Springs.jpg" alt="Soda Springs">
                 </picture>
                 <table class="weatherSum">
                     <tr>
