--- a/lesson11/preston-10.html
+++ b/lesson11/preston-10.html
@@ -103,6 +103,7 @@
                     </div>
                 </div>
             </section>
+            <div class="eventsData"></div>
            
             <div class="article-area"><!--article area-->
                 <img class="articleimg" src="images/zion-park-139012_640.jpg" alt="Winter Season" >
