--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title>Preston Weather Page</title>
+        <title>Soda Springs Weather Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
@@ -103,44 +103,31 @@
                     </div>
                 </div>
             </section>
-           
+            <div class="eventsData"></div>
             <div class="article-area"><!--article area-->
-                <img class="articleimg" src="images/zion-park-139012_640.jpg" alt="Winter Season" >
+                <img class="articleimg" src="images\woman-wearing-red-coat.jpg" alt="Woman wearing warm" >
                 <div class="article-holder">
-                    <h3>10 Things to do in Soda Springs this winter</h3>
-                    <h5><i>Written by CDC :Centers for Disease Control and Prevention</i></h5>
-                    <p>Winter storms and cold temperatures can be dangerous. Stay safe and healthly by planning ahead. Prepare your home and cars. Prepare for power outages and outdoor activies. </p>
-                    <p><strong>Take These Steps for Your Home:</strong> </p>
-                    <p>Many people prefer to remain indoors during winter, but staying inside is no guarantee of safety. Take these steps to keep your home safe and warm during the winter months.</p>
-
-                    <ul>
-                        <li>Winterize your home.
-                        <ul>
-                            <li>Install weather stripping, insulation, and storm windows.</li>
-                            <li>Insulate water lines that run along exterior walls.</li>
-                            <li>Clean out gutters and repair roof leaks.</li>
-                        </ul>
-                        </li>
-                        <li>Check your heating systems.
-                        <ul>
-                            <li>Have your heating system serviced professionally to make sure that it is clean, working properly, and ventilated to the outside.</li>
-                            <li>Inspect and clean fireplaces and chimneys.</li>
-                            <li>Install a smoke detector. Test batteries monthly and replace them twice a year.</li>
-                            <li>Have a safe alternate heating source and alternate fuels available.</li>
-                            <li>Prevent carbon monoxide (CO) emergencies.</li>
-                        </ul>
-                        </li>
-                    </ul>
-                    <span><a class="readFullArticle" href="https://www.cdc.gov/features/winterweather/index.html" target="_blank"> continue to read full article...</a></span>
+                    <h3>HOW TO STAY WARM THIS WINTER: A SCIENTIST EXPLAINS</h3>
+                    <p><em>By Johnric Smith</em></p>
+                    <p>Whether waiting for a bus, playing outside or walking the dog—during the colder winter season, everyone is looking for ways to stay warm. 
+                        Luckily, the process your body uses to break down foods serves as an internal heater.</p>
+                    <p>But when the weather is cold, some defensive strategies are also necessary to prevent your body from losing its heat to the surrounding environment.</p>
+                    <p>As the temperature difference between your warm body and its frigid surroundings increases, heat is lost more quickly.It becomes more of a challenge to maintain a normal body temperature</p>
+                    <p>And two people with the same exact body temperature in the same exact environment may have very different perceptions.</p>
+                    <p>One may feel frozen while the other is completely comfortable.But beyond the subjective experience of coldness, researchers do know that natural physiological responses to cold as well as behavioral adaptations—like bundling up!—can help keep your body around 98.6 degrees Fahrenheit
+                         and make sure you feel warm.</p>
+                    <h4>What your body does</h4>
+                    <p>Your blood courses through your body carrying nutrients, oxygen and other biological important substances. And this delivery system also brings heat produced in the muscles to the skin, where it's released.</p>
+                    <span><a class="readFullArticle" href="https://www.newsweek.com/cold-winter-weather-warm-snow-ice-1300187" target="_blank"> continue to read full article...</a></span>
                 </div>
             </div>
             <!---contact information goes here-->
             <div class="contactarea">
-                        <img class="presmap" src="images/sodaMap.png" alt="Soda Springs Map">
+                        <img class="presmap" src="images/preston-map.png" alt="Preston Map">
                 <div class="contact-info">
                     <h3>Contact Details</h3>
-                    <p class="details">&#128204;-111N 42E</p>
-                    <P class="details">&#128234;Soda Springs, ID 83276</P>
+                    <p class="details">&#128204;30N 20E</p>
+                    <P class="details">&#128234;Preston, ID 83263</P>
                     <P class="details">&#128222;+999-999-9999</P>
                     <P class="details">&#128140; info@weatherguru.com</P>
                     <!---social media content-->
