--- a/lesson11/fishHaven.html
+++ b/lesson11/fishHaven.html
@@ -149,7 +149,7 @@
         <script src="js/displaybanner.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script src="js/fontfamily.js"></script>
-        <script src="js/fishHavenWeather.js"></script>
+        <script src="js/fishHaven.js"></script>
         
     </body>
 </html>
