--- a/lesson11/home.html
+++ b/lesson11/home.html
@@ -38,7 +38,10 @@
             </ul>
         </nav> 
         <main><!--home page-->
-            <div class = "townData"></div>
+            <div class="weatherStory"> 
+                <h3>Weather Guru at your service.</h3>
+            </div>
+            <div class ="townData"></div>
             <!---contact information goes here-->
             <div class="contactarea">
                 <img class="presmap" src="images/preston-map.png" alt="preston">
@@ -71,7 +74,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script src="js/fontfamily.js"></script>
         <script src="/js/windchill.js"></script>
-        <!--<script src="/lesson8/js/ratingbar.js"></script>-->
         <script src="js/towns.js"></script>
         
         
