--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -141,7 +141,7 @@
             </div>
         </main>
         <footer>
-            <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
+            <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
              
             <p><span id="day"></span></p>
             <p>Weather data courtesy of <a class="courtesy" href="https://openweathermap.org/"  target="_blank">openweather.org</a></p>                 
