--- a/lesson11/home.html
+++ b/lesson11/home.html
@@ -64,7 +64,7 @@
             
         </main>
         <footer>
-            <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
+            <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
              
             <p><span id="day"></span></p>                 
         </footer>
