--- a/lesson11/fishHaven.html
+++ b/lesson11/fishHaven.html
@@ -29,19 +29,19 @@
         <nav><!--navigation here-->
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="home.html">Home</a></li>
-                <li><a href ="preston-10.html" >Preston</a></li>
+                <li><a href ="index.html">Home</a></li>
+                <li><a href ="preston.html" >Preston</a></li>
                 <li><a href="sodaSprings.html" > Soda Springs</a></li>
                 <li><a href="fishHaven.html"class="active">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav> 
         <main><!--weather summary and hero image--> 
             <h2>Fish Haven</h2>
             <div class="container1">
                 <picture>
-                    <source srcset="/images/fish-haven.jpg" media = "(max-width:500px)">
+                    <source srcset="images/fish-haven_small.jpg" media = "(max-width:500px)">
                     <source srcset="images/fish-haven.jpg" media = "(min-width:520px) and (max-width:959px)" >
                     <source srcset="images/fish-haven_large.jpg" media = "(min-width:960px)">
                     <img class="heroImg" src="images/fish-haven.jpg" alt="Fish Haven">
