--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -29,12 +29,12 @@
             <nav><!--navigation here-->
                 <ul class="navigationbar">
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                    <li><a href ="home.html">Home</a></li>
-                    <li><a href ="preston-10.html" >Preston</a></li>
+                    <li><a href ="index.html">Home</a></li>
+                    <li><a href ="preston.html" >Preston</a></li>
                     <li><a href="sodaSprings.html">Soda Springs</a></li>
                     <li><a href="fishHaven.html">Fish Haven</a></li>
                     <li><a href="stormcenter.html">Storm Center</a></li>
-                    <li><a href="gallery-7.html" class="active">Gallery</a></li>
+                    <li><a href="gallery.html" class="active">Gallery</a></li>
                 </ul>
             </nav> 
         <main>
