--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -18,7 +18,7 @@
     <body onload="display_banner()">
         <div id="fridaybanner"></div>
         <header>
-            <picture><img src ="/lesson6/images/kweather.png" alt = "Weather site Logo" > </picture>
+            <picture><img src ="images/kweather.png" alt = "Weather site Logo" > </picture>
             <section class="headings">
                 <div>
                     <h1><strong>Weatherguru</strong></h1>
@@ -29,12 +29,12 @@
         <nav><!--navigation here-->
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="home.html"class="active">Home</a></li>
-                <li><a href ="preston-10.html" >Preston</a></li>
+                <li><a href ="index.html"class="active">Home</a></li>
+                <li><a href ="preston.html" >Preston</a></li>
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="stormcenter.html" >Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav> 
         <main><!--home page-->
