--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -30,11 +30,11 @@
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                 <li><a href ="inedx.html">Home</a></li>
-                <li><a href ="preston-10.html" class="active">Preston</a></li>
+                <li><a href ="preston.html" class="active">Preston</a></li>
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav> 
         <main><!--weather summary and hero image--> 
