--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title>Preston Weather Page</title>
+        <title>Gallery Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
         <link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">
         <link rel="stylesheet" href = "css/normalize.css">
-        <link rel="stylesheet" href="css/gallery-style.css">
-        <link rel="stylesheet" href = "css/l7middle.css">
-        <link rel="stylesheet" href = "css/l7large.css">
+        <link rel="stylesheet" href="css/small.css">
+        <link rel="stylesheet" href = "css/middle.css">
+        <link rel="stylesheet" href = "css/large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
         
@@ -80,7 +80,7 @@
 
         </main>
         <footer>
-                <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|South Africa|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
+                <p>&copy;<span id="currentYear"></span> weatherguru|Lusanda Mavuma|<a href="https://www.byui.edu/online">BYUI-Online Learning</a></p>
                  
                 <p><span id="day"></span></p>                 
             </footer>
