--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -29,7 +29,7 @@
         <nav><!--navigation here-->
             <ul class="navigationbar">
                 <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="inedx.html">Home</a></li>
+                <li><a href ="index.html">Home</a></li>
                 <li><a href ="preston.html" class="active">Preston</a></li>
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
