--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title>Preston Weather Page</title>
+        <title>Storm Center Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Weather site Project:CIT230 BYUI">
