--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -105,7 +105,7 @@
             </section>
             <div class="eventsData"></div>
             <div class="article-area"><!--article area-->
-                <img class="articleimg" src="images\woman-wearing-red-coat.jpg" alt="Woman wearing warm" >
+                <img class="articleimg" src="images/woman-wearing-red-coat.jpg" alt="Woman wearing warm" >
                 <div class="article-holder">
                     <h3>HOW TO STAY WARM THIS WINTER: A SCIENTIST EXPLAINS</h3>
                     <p><em>By Johnric Smith</em></p>
