--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -50,7 +50,7 @@
             <!--Section 2-->
             <fieldset>
                 <legend>Storm Details</legend>
-                <label class="top">Storm Date<input type="date" name="stormdate"></label>
+                <label class="top">Storm Date<input type="date" data-polyfill="all" name="stormdate"></label>
                 <label class="top">Storm Type<input list="stormtype" name="storms"></label>
                 <datalist id="stormtype">
                     <option value="Flash Flood">
@@ -107,9 +107,7 @@
         <script src="js/updates.js"></script>
         <script src="js/displaybanner.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>
-            WebFont.load({google:{families: ['Roboto']}});
-        </script>
+        <script src="js/fontfamily.js"></script>
         <script src="js/ratingbar.js"></script>
         
         
