--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>Lesson 09:<a href="/lesson9/prophets.html">Prophets</a>| <a href="/lesson9/home.html">Home Page</a></li>
                 <li>Lesson 10:<a href="/lesson10/api-test.html">API Test</a> | <a href="/lesson10/preston-10.html">Preston Weather API </a> </li>
                 <li>Lesson 11:<a href="/lesson11/index.html">Completed Site</a></li>
+                <li>Lesson 12:<a href="/lesson12/index.html">Preproessors</a></li>
                 
 
             </ul>
