--- a/lesson13/home.html
+++ b/lesson13/home.html
@@ -37,6 +37,15 @@
             </ul>
         </nav> 
         <main><!--home page-->
+            <div class="container">
+                <img src="images/hotel.jpg" alt="Bedroom Picture" class="homeImg">
+                <div class="heroText">
+                    <h2>Home away from home</h2>
+                    <p>Get it from R500pp/night</p>
+                    <button>Check Availability</button>
+                </div>
+                
+            </div>
             <!---contact information goes here-->
             <div class="contactarea">
                 <img class="presmap" src="images/preston-map.png" alt="preston">
