--- a/lesson13/home.html
+++ b/lesson13/home.html
@@ -38,11 +38,13 @@
         </nav> 
         <main><!--home page-->
             <div class="container">
-                <img src="images/hotel.jpg" alt="Bedroom Picture" class="homeImg">
+                <img src="images/hotel.jpg" alt="Bedroom Picture" class="heroImg">
+                <img src="images/bedroom.jpg" alt="Bedroom Image" class="heroImg">
+                <img src="images/staircase.jpg" alt="Bedroom Image" class="heroImg">
                 <div class="heroText">
                     <h2>Home away from home</h2>
                     <p>Get it from R500pp/night</p>
-                    <button>Check Availability</button>
+                    <button href="#">Check Availability</button>
                 </div>
                 
             </div>
