--- a/lesson13/home.html
+++ b/lesson13/home.html
@@ -31,7 +31,7 @@
                 <li><a href ="home.html" class="active">Home</a></li>
                 <li><a href ="temples.html" >Temples</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="bookings.html">Reservations</a></li>
                 <li><a href="#" >Contact</a></li>
                 <li><a href="#">Gallery</a></li>
             </ul>
@@ -44,7 +44,7 @@
                 <div class="heroText">
                     <h2>Home away from home</h2>
                     <p>Get it from R500pp/night</p>
-                    <button href="#">Check Availability</button>
+                    <button href="bookings.html">Check Availability</button>
                 </div>
                 
             </div>
