--- a/lesson13/temples.html
+++ b/lesson13/temples.html
@@ -31,7 +31,7 @@
                 <li><a href ="home.html" class="active">Home</a></li>
                 <li><a href ="temples.html" >Temples</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="bookings.html">Reservations</a></li>
                 <li><a href="#" >Contact</a></li>
                 <li><a href="#">Gallery</a></li>
             </ul>
