--- a/lesson13/home.html
+++ b/lesson13/home.html
@@ -8,8 +8,8 @@
         <!--<link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">-->
         <link rel="stylesheet" href = "css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
-        <!--<link rel="stylesheet" href = "css/middle.css">
-        <link rel="stylesheet" href = "css/large.css">-->
+        <link rel="stylesheet" href = "css/middle.css">
+        <!--<link rel="stylesheet" href = "css/large.css">-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         
         
@@ -96,7 +96,7 @@
             <div>
                 <a target="_blank" href="https://www.facebook.com">
                     <img src="images/facebook_icon.png" alt="Facebook icon" ></a>
-                <a target="_blank" href="https://www.instagram.com">webfont                                                                                                                                     
+                <a target="_blank" href="https://www.instagram.com">                                                                                                                                     
                     <img src="images/instagram_icon.png" alt="Instagram icon" ></a>
                 <a target="_blank" href="https://www.twitter.com">
                     <img src="images/twitter_icon.png" alt="Twitter icon"></a> 
