--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -47,31 +47,39 @@
         </section>
         <main><!--contact us form-->
             <div class="contactArea">
-              <div>
+              <div class="contactDetails">
                   <h2>Contact Us</h2>
+                  <h4>Contact Details</h4>
+                  <p>Telephone: +1 3357 5674</p>
+                  <p>FaX: +1 234 5678</p>
+                  <p>Email: info@templesuites.org</p>
               </div>
-              <div class="row">
-                  <div class="column"><!--Map Image/embedded map    -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.4048370284854!2d-77.09772048528721!3d38.98325594948481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0xceab47cd19a23a3b!2s4800%20Montgomery%20Ln%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2sza!4v1576861684800!5m2!1sen!2sza" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                  </div>
-                  <div class="column"><!--form division-->
-                    <form>
-                        <label class="top">First Name*<input type="text" name="fname" required pattern="[A-Za-z ]{5,99}"></label>
-                        <label class="top">Last Name*<input type="text" name="lname" required pattern="[A-Za-z ]{5,99}"></label>
-                        <label class="top">e-mail*<input type="email" name="email" placeholder="example@gmail.com" required></label>
-                        <label class="top">City
-                                <select name="country">
-                                    <option value="" disabled="disabled" selected="selected"></option>
-                                    <option value="nigeria">Abba Nigeria</option>
-                                    <option value="ghana">Accra Ghana</option>
-                                    <option value="australia">Adelaide Australia</option>
-                                    <option value="rexburg">Rexburg Idaho</option>
-                                </select>
-                        </label>
-                        <label class="message">Message:<textarea name="message" placeholder="Write here"></textarea></label>
-                        <input type="submit" value="Submit" class="submitBtn">
-                    </form>
-                  </div>
+              <div class="physicalAdress">
+                  <h3>Physical Address</h3>
+                  <p>4800 Montgomery Ln</p>
+                  <p>Bethesda ,MD</p>
+                  <P>20814 USA</P>
+              </div>
+              <div class="column"><!--form division-->
+                <form>
+                    <label class="top">First Name*<input type="text" name="fname" required pattern="[A-Za-z ]{5,99}"></label>
+                    <label class="top">Last Name*<input type="text" name="lname" required pattern="[A-Za-z ]{5,99}"></label>
+                    <label class="top">e-mail*<input type="email" name="email" placeholder="example@gmail.com" required></label>
+                    <label class="top">City
+                        <select name="country">
+                            <option value="" disabled="disabled" selected="selected"></option>
+                            <option value="nigeria">Abba Nigeria</option>
+                            <option value="ghana">Accra Ghana</option>
+                            <option value="australia">Adelaide Australia</option>
+                            <option value="rexburg">Rexburg Idaho</option>
+                        </select>
+                    </label>
+                    <label class="message">Message:<textarea name="message" placeholder="Write here"></textarea></label>
+                    <input type="submit" value="Submit" class="submitBtn">
+                </form>
+              </div>
+              <div class="column"><!--Map Image/embedded map    -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.4048370284854!2d-77.09772048528721!3d38.98325594948481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0xceab47cd19a23a3b!2s4800%20Montgomery%20Ln%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2sza!4v1576861684800!5m2!1sen!2sza" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
               </div>  
             </div>
         </main>
