--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -14,31 +14,31 @@
         
     </head>
     <body>
-        <!--<header>
+        <header>
             <picture><img src ="images/logo_hotel3.png" alt = "Temple Inn Logo" > </picture>
             <section class="headings">
                 <div>
                     <h1>Temple Inn and Suites</h1>
                     <p class="motto">Feel at home</p>
                 </div>
-            </section>        
-        </header>-->
-        <nav><!--navigation here-->
-            <ul class="navigationbar">
-                <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="home.html">Home</a></li>
-                <li><a href ="temples.html" >Temples</a></li>
-                <li class="dropdown"><a href="services.html" class="dropbtn">Services</a>
-                    <div class="dropdown_content">
-                        <a href="reception.html">Reception</a>
-                        <a href="templeMissionary.html" class="active">Temple Missionary</a>
-                    </div>
-                </li>
-                <li><a href="bookings.html">Reservations</a></li>
-                <li><a href="#" >Contact</a></li>
-                <li><a href="#">Gallery</a></li>
-            </ul>
-        </nav> 
+            </section>
+            <nav><!--navigation here-->
+                <ul class="navigationbar">
+                    <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
+                    <li><a href ="home.html">Home</a></li>
+                    <li><a href ="temples.html" >Temples</a></li>
+                    <li class="dropdown"><a href="services.html" class="dropbtn">Services</a>
+                        <div class="dropdown_content">
+                            <a href="reception.html">Reception</a>
+                            <a href="templeMissionary.html">Temple Missionary</a>
+                        </div>
+                    </li>
+                    <li><a href="bookings.html">Reservations</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="#">Gallery</a></li>
+                </ul>
+            </nav>         
+        </header>
         <!--SLIDE SHOW-->
         <section>
             <img  class="mySlides" src="images/bedroom-decoration-hotels-interior.jpg">
@@ -48,7 +48,7 @@
         <main><!--contact us form-->
             <div class="contactArea">
               <div class="contactDetails">
-                  <h2>Contact Us</h2>
+                  <h3>Contact Us</h3>
                   <h4>Contact Details</h4>
                   <p>Telephone: +1 3357 5674</p>
                   <p>FaX: +1 234 5678</p>
