--- a/lesson13/services.html
+++ b/lesson13/services.html
@@ -23,24 +23,24 @@
                     <h1>Temple Inn and Suites</h1>
                     <p class="motto">Feel at home</p>
                 </div>
-            </section>        
+            </section>
+            <nav><!--navigation here-->
+                <ul class="navigationbar">
+                    <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
+                    <li><a href ="home.html">Home</a></li>
+                    <li><a href ="temples.html" >Temples</a></li>
+                    <li class="dropdown"><a href="services.html" class="dropbtn">Services</a>
+                        <div class="dropdown_content">
+                            <a href="reception.html">Reception</a>
+                            <a href="templeMissionary.html" class="active">Temple Missionary</a>
+                        </div>
+                    </li>
+                    <li><a href="bookings.html">Reservations</a></li>
+                    <li><a href="#" >Contact</a></li>
+                    <li><a href="#">Gallery</a></li>
+                </ul>
+            </nav>         
         </header>
-        <nav><!--navigation here-->
-            <ul class="navigationbar">
-                <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="home.html" >Home</a></li>
-                <li><a href ="temples.html" >Temples</a></li>
-                <li class="dropdown"><a href="services.html" class="dropbtn" class="active">Services</a>
-                    <div class="dropdown_content">
-                        <a href="reception.html">Reception</a>
-                        <a href="">Temple Missionary</a>
-                    </div>
-                </li>
-                <li><a href="bookings.html">Reservations</a></li>
-                <li><a href="#" >Contact</a></li>
-                <li><a href="#">Gallery</a></li>
-            </ul>
-        </nav> 
         <main><!--services available-->
             <div class="amenities_img">
                 <img src="images/exercise_room.jpg" alt="Amenities">
