--- a/lesson13/reception.html
+++ b/lesson13/reception.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href = "css/middle.css">
         <!--<link rel="stylesheet" href = "css/large.css">-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-        
+        <script src="js/toggle.js"></script>
         
 
     </head>
@@ -23,24 +23,24 @@
                     <h1>Temple Inn and Suites</h1>
                     <p class="motto">Feel at home</p>
                 </div>
-            </section>        
+            </section>
+            <nav><!--navigation here-->
+                <ul class="navigationbar">
+                    <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
+                    <li><a href ="home.html">Home</a></li>
+                    <li><a href ="temples.html" >Temples</a></li>
+                    <li class="dropdown"><a href="services.html" class="dropbtn">Services</a>
+                        <div class="dropdown_content">
+                            <a href="reception.html" class="active">Reception</a>
+                            <a href="templeMissionary.html" >Temple Missionary</a>
+                        </div>
+                    </li>
+                    <li><a href="bookings.html">Reservations</a></li>
+                    <li><a href="contact.html" >Contact</a></li>
+                    <li><a href="#">Gallery</a></li>
+                </ul>
+            </nav>         
         </header>
-        <nav><!--navigation here-->
-            <ul class="navigationbar">
-                <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                <li><a href ="home.html" >Home</a></li>
-                <li><a href ="temples.html" >Temples</a></li>
-                <li class="dropdown"><a href="services.html" class="dropbtn" class="active">Services</a>
-                    <div class="dropdown_content">
-                        <a href="reception.html" class="active">Reception</a>
-                        <a href="#">Temple Missionary</a>
-                    </div>
-                </li>
-                <li><a href="bookings.html">Reservations</a></li>
-                <li><a href="#" >Contact</a></li>
-                <li><a href="#">Gallery</a></li>
-            </ul>
-        </nav> 
         <main><!--Wedding Reception page-->
             <div class="reception">
                 <h2>Wedding Reception at The Temple Inn</h2>
